--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <image src= "nell.jpg" width="200" height="200"></image></td>
+            <td> <image src= "nell.png" width="200" height="200"></image></td>
 
             <td>
                 <h2> Software Developer</h2>
